--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 	color:#FFFDD0;
 	text-align: center;
 	margin-bottom: -10px;
-	padding: 8px 0;
+	padding: 16px 0 8px;
 }
 .social{
     margin: 6px;
