--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,7 @@
 }
 
 /*General Info (Icons) Section*/
-#general-info i{
+#general-info icon{
 	background: white;
 	padding: 12px;
 	border-radius: 8px;
