--- a/css/main.css
+++ b/css/main.css
@@ -36,7 +36,7 @@
     margin: 6px;
     display: inline-block;
 }
-.social{
+.social span{
 	font-size:48px !important;
 }
 
@@ -90,7 +90,7 @@
 	margin-top: 24px;
 }
 
-/*General Info (spans) Section*/
+/*General Info (Icons) Section*/
 #general-info span{
 	background: white;
 	padding: 12px;
