--- a/css/main.css
+++ b/css/main.css
@@ -228,3 +228,10 @@
     	background-size:2200px !important;
 	}
 }
+@media (min-width: 320px){
+	#map {
+		width: 300px;
+		height: 300px;
+	}
+}
+
