--- a/css/main.css
+++ b/css/main.css
@@ -228,7 +228,7 @@
     	background-size:2200px !important;
 	}
 }
-@media (min-width: 320px){
+@media (max-width: 320px){
 	#map {
 		width: 300px;
 		height: 300px;
