--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,241 +1,244 @@
-
-
 /*General - theme*/
 
 .width-control img {
-    min-width:200px;
-    width: 36%;
+  min-width: 200px;
+  width: 36%;
 }
-.front{
-    background: #FFFDD0;
-    border: 1px solid #ccc;
+.front {
+  background: #fffdd0;
+  border: 1px solid #ccc;
 }
-.transparent{
-	background:transparent;
+.transparent {
+  background: transparent;
 }
-.height{
-	height:128px;
+.height {
+  height: 128px;
 }
-.half-height{
-	height:64px;
+.half-height {
+  height: 64px;
 }
-.quarter-height{
-	height:32px;
+.quarter-height {
+  height: 32px;
 }
-
 
 /*Home - top section*/
-.background{
-	background:#3f3f3f;
-	color:#FFFDD0;
-	text-align: center;
-	margin-bottom: -10px;
-	padding: 16px 0 8px;
+.background {
+  background: #3f3f3f;
+  color: #fffdd0;
+  text-align: center;
+  margin-bottom: -10px;
+  padding: 16px 0 8px;
 }
-.social{
-    margin: 6px;
-    display: inline-block;
+.social {
+  margin: 6px;
+  display: inline-block;
 }
-.social icon{
-	font-size:48px !important;
+.social icon {
+  font-size: 48px !important;
 }
 
 /*Services Section*/
-.services{
-	width:90%;
-	margin: 0 auto;
+.services {
+  width: 90%;
+  margin: 0 auto;
 }
-.service-list{
-	margin-left:0;
-	padding-right:36px;
+.service-list {
+  margin-left: 0;
+  padding-right: 36px;
 }
-.service-list li{
-	width: 46%;
-	display: inline-block;
-	min-width: 160px;
-	text-align: center;
-	font-size: 1.2em;
-	background: #ffffff;
-	margin: 12px;
-	padding: 12px;
-	border: 2px solid #337ab7;
-	color: #337ab7;
+.service-list li {
+  width: 46%;
+  display: inline-block;
+  min-width: 160px;
+  text-align: center;
+  font-size: 1.2em;
+  background: #ffffff;
+  margin: 12px;
+  padding: 12px;
+  border: 2px solid #337ab7;
+  color: #337ab7;
 }
 
 /*The Team Section*/
-.about p{
-	width: 70%;
-    min-width: 125px;
-    margin: 0 auto;
-    line-height: 1.8em;
+.about p {
+  width: 70%;
+  min-width: 125px;
+  margin: 0 auto;
+  line-height: 1.8em;
 }
-.the-team{
-	margin-top:62px;
+.the-team {
+  margin-top: 62px;
 }
-.card-deck{
-	margin:48px 0;
+.card-deck {
+  margin: 48px 0;
 }
-.card{
-	width:30%;
-	display:inline-block;
-	min-width:275px;
-	vertical-align: top;
-	margin-bottom:24px;
+.card {
+  width: 30%;
+  display: inline-block;
+  min-width: 275px;
+  vertical-align: top;
+  margin-bottom: 24px;
 }
-.card img{
-	max-height:225px;
-	margin:0 auto;
+.card img {
+  max-height: 225px;
+  margin: 0 auto;
 }
-.card-block{
-	margin-top: 24px;
+.card-block {
+  margin-top: 24px;
 }
 
 /*General Info (Icons) Section*/
-#general-info icon{
-	background: white;
-	padding: 12px;
-	border-radius: 8px;
+#general-info icon {
+  background: white;
+  padding: 12px;
+  border-radius: 8px;
 }
-#general-info .fa{
-	font-size:64px !important;
-	margin:12px;
+#general-info .fa {
+  font-size: 64px !important;
+  margin: 12px;
 }
-.fa-car{
-	color: #f84471;
-	border: 4px solid #f84471;
+.fa-car {
+  color: #f84471;
+  border: 4px solid #f84471;
 }
-.fa-road{
-	color: #3f3f3f;;
-	border: 4px solid #3f3f3f;;
+.fa-road {
+  color: #3f3f3f;
+  border: 4px solid #3f3f3f;
 }
-.fa-train{
-	color: #6BBB63;
-	border: 4px solid #6BBB63;
+.fa-train {
+  color: #6bbb63;
+  border: 4px solid #6bbb63;
 }
-.fa-bus{
-	color: #3677BE;
-	border: 4px solid #3677BE;
+.fa-bus {
+  color: #3677be;
+  border: 4px solid #3677be;
 }
-.fa-truck{
-	color: #F17A45;
-	border: 4px solid #F17A45;
+.fa-truck {
+  color: #f17a45;
+  border: 4px solid #f17a45;
 }
 
 /*Map Section*/
-.map{
-	margin:64px 0;
+.map {
+  margin: 64px 0;
 }
 #map {
-	width: 42%;
-	min-width:200px;
-	height:600px;
-	margin: 0 auto;
+  width: 42%;
+  min-width: 200px;
+  height: 600px;
+  margin: 0 auto;
 }
 
 /*Contact*/
 .form-group input,
-.form-group textarea{
-	max-width: 600px;
-	margin: 15px auto;
+.form-group textarea {
+  max-width: 600px;
+  margin: 15px auto;
 }
-.btn-row{
-	margin-top:24px;
+.btn-row {
+  margin-top: 24px;
 }
-.btn-group>.btn{
-	border: 1px solid #ccc;
+.btn-group > .btn {
+  border: 1px solid #ccc;
 }
-.active{
-	background:#ccc;
+.active {
+  background: #ccc;
 }
 .btn-primary {
-    color: #FFFDD0;
-    background-color: #3f3f3f;
-    border-color: #3f3f3f;
+  color: #fffdd0;
+  background-color: #3f3f3f;
+  border-color: #3f3f3f;
 }
 .btn-primary:hover {
-    color: #FFFDD0;
-    background-color: #444;
-    border-color: #444;
+  color: #fffdd0;
+  background-color: #444;
+  border-color: #444;
 }
 .btn-primary:active,
 .btn-primary:focus,
 .btn-primary:active:focus {
-    color: #FFFDD0;
-    background-color: #ccc;
-    border-color: #ccc;
+  color: #fffdd0;
+  background-color: #ccc;
+  border-color: #ccc;
+}
+#confirmation {
+  display: block;
+  background: #ccc;
+  margin: 0px 20%;
+  height: 329px;
+  padding: 58px 0;
+  border: 2px solid #337ab7;
+  color: #337ab7;
 }
 
 /*End of Page Section*/
-.end-of-page img{
-	max-width:80%;
+.end-of-page img {
+  max-width: 80%;
 }
-.end-of-page .section{
-	width: 46%;
-	display: inline-block;
-	min-width: 250px;
-	text-align: center;
-	margin: 12px;
-	padding: 12px;
-	border: 2px solid #3f3f3f;
-	background:#FFFDD0;
-	color:#3f3f3f;
+.end-of-page .section {
+  width: 46%;
+  display: inline-block;
+  min-width: 250px;
+  text-align: center;
+  margin: 12px;
+  padding: 12px;
+  border: 2px solid #3f3f3f;
+  background: #fffdd0;
+  color: #3f3f3f;
 }
 
 /*Footer*/
-.spacer{
-	margin:0 8px;
+.spacer {
+  margin: 0 8px;
 }
-
 
 /*MEDIA QUERIES*/
 
-@media (min-width: 767px){
-	body {
-    	background-size:1600px !important;
-	}
-	.navbar {
-	    border-radius: 0;
-	}
-	#myNavbar{
-	    width: 400px;
-	    margin: 0 auto;
-	}
+@media (min-width: 767px) {
+  body {
+    background-size: 1600px !important;
+  }
+  .navbar {
+    border-radius: 0;
+  }
+  #myNavbar {
+    width: 400px;
+    margin: 0 auto;
+  }
 }
 
-@media (max-width: 767px){
-	body {
-    	background-size:1600px !important;
-	}
-	#home{
-	    background-position-x: -100px !important;
-	}
-	.mid-page{
-		padding:12px;
-	}
-	.about p{
-		width:90%;
-	}
-	#map {
-		width: 350px;
-		height: 350px;
-		margin: 0 auto;
-	}
-
+@media (max-width: 767px) {
+  body {
+    background-size: 1600px !important;
+  }
+  #home {
+    background-position-x: -100px !important;
+  }
+  .mid-page {
+    padding: 12px;
+  }
+  .about p {
+    width: 90%;
+  }
+  #map {
+    width: 350px;
+    height: 350px;
+    margin: 0 auto;
+  }
 }
 
-@media (min-width: 1600px){
-	body {
-    	background-size:2200px !important;
-	}
-	#map {
-		width: 60%;
-		height: 300px;
-	}
+@media (min-width: 1600px) {
+  body {
+    background-size: 2200px !important;
+  }
+  #map {
+    width: 60%;
+    height: 300px;
+  }
 }
-@media (max-width: 380px){
-	#map {
-		width: 300px;
-		height: 300px;
-	}
+@media (max-width: 380px) {
+  #map {
+    width: 300px;
+    height: 300px;
+  }
 }
-
